src/main/gen/PseudoAsmParser.java
// Generated from L:/Projekty/kotlinek/src/main/antlr\PseudoAsmParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseudoAsmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ShebangLine=1, DelimitedComment=2, LineComment=3, WS=4, NL=5, RESERVED=6, 
		DOT=7, COMMA=8, LPAREN=9, RPAREN=10, LSQUARE=11, RSQUARE=12, LCURL=13, 
		RCURL=14, REFERENCE=15, MOD=16, DIV=17, ADD=18, SUB=19, INCR=20, DECR=21, 
		DEREFERENCE=22, DISJ=23, EXCL=24, COLON=25, SEMICOLON=26, ASSIGNMENT=27, 
		ADD_ASSIGNMENT=28, SUB_ASSIGNMENT=29, MULT_ASSIGNMENT=30, DIV_ASSIGNMENT=31, 
		MOD_ASSIGNMENT=32, ARROW=33, DOUBLE_ARROW=34, RANGE=35, COLONCOLON=36, 
		Q_COLONCOLON=37, DOUBLE_SEMICOLON=38, HASH=39, AT=40, QUEST=41, ELVIS=42, 
		LANGLE=43, RANGLE=44, LE=45, GE=46, EXCL_EQ=47, EXCL_EQEQ=48, AS_SAFE=49, 
		EQEQ=50, EQEQEQ=51, SINGLE_QUOTE=52, RETURN_AT=53, CONTINUE_AT=54, BREAK_AT=55, 
		FILE=56, PACKAGE=57, IMPORT=58, CLASS=59, INTERFACE=60, FUN=61, OBJECT=62, 
		VAL=63, VAR=64, TYPE_ALIAS=65, CONSTRUCTOR=66, BY=67, COMPANION=68, INIT=69, 
		THIS=70, SUPER=71, TYPEOF=72, WHERE=73, IF=74, ELSE=75, WHEN=76, TRY=77, 
		CATCH=78, FINALLY=79, FOR=80, DO=81, WHILE=82, THROW=83, RETURN=84, CONTINUE=85, 
		BREAK=86, AS=87, IS=88, IN=89, NOT_IS=90, NOT_IN=91, OUT=92, FIELD=93, 
		PROPERTY=94, GET=95, SET=96, GETTER=97, SETTER=98, RECEIVER=99, PARAM=100, 
		SETPARAM=101, DELEGATE=102, DYNAMIC=103, PUBLIC=104, PRIVATE=105, PROTECTED=106, 
		INTERNAL=107, ENUM=108, SEALED=109, ANNOTATION=110, DATA=111, INNER=112, 
		TAILREC=113, OPERATOR=114, INLINE=115, INFIX=116, EXTERNAL=117, SUSPEND=118, 
		OVERRIDE=119, ABSTRACT=120, FINAL=121, OPEN=122, CONST=123, LATEINIT=124, 
		VARARG=125, NOINLINE=126, CROSSINLINE=127, REIFIED=128, QUOTE_OPEN=129, 
		TRIPLE_QUOTE_OPEN=130, RealLiteral=131, FloatLiteral=132, DoubleLiteral=133, 
		LongLiteral=134, IntegerLiteral=135, HexLiteral=136, BinLiteral=137, BooleanLiteral=138, 
		NullLiteral=139, Identifier=140, LabelReference=141, LabelDefinition=142, 
		FieldIdentifier=143, CharacterLiteral=144, UNICODE_CLASS_LL=145, UNICODE_CLASS_LM=146, 
		UNICODE_CLASS_LO=147, UNICODE_CLASS_LT=148, UNICODE_CLASS_LU=149, UNICODE_CLASS_ND=150, 
		UNICODE_CLASS_NL=151, Inside_Comment=152, Inside_WS=153, Inside_NL=154, 
		QUOTE_CLOSE=155, LineStrRef=156, LineStrText=157, LineStrEscapedChar=158, 
		LineStrExprStart=159, TRIPLE_QUOTE_CLOSE=160, MultiLineStringQuote=161, 
		MultiLineStrRef=162, MultiLineStrText=163, MultiLineStrEscapedChar=164, 
		MultiLineStrExprStart=165, MultiLineNL=166, StrExpr_IN=167, StrExpr_Comment=168, 
		StrExpr_WS=169, StrExpr_NL=170, DOLLAR=180;
	public static final int
		RULE_pseudoAsmFile = 0, RULE_jocker = 1, RULE_referencer = 2, RULE_operand = 3, 
		RULE_value = 4, RULE_addressed = 5, RULE_index = 6, RULE_immediate = 7, 
		RULE_floatimmediate = 8, RULE_stringimmediate = 9, RULE_absAddress = 10, 
		RULE_name = 11, RULE_typeName = 12, RULE_instrukcja = 13, RULE_linia = 14, 
		RULE_target = 15, RULE_arg = 16, RULE_identifier = 17, RULE_simpleIdentifier = 18, 
		RULE_assemblerBody = 19, RULE_multiLineStringLiteral = 20, RULE_multiLineStringContent = 21, 
		RULE_lineStringLiteral = 22, RULE_lineStringContent = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"pseudoAsmFile", "jocker", "referencer", "operand", "value", "addressed", 
			"index", "immediate", "floatimmediate", "stringimmediate", "absAddress", 
			"name", "typeName", "instrukcja", "linia", "target", "arg", "identifier", 
			"simpleIdentifier", "assemblerBody", "multiLineStringLiteral", "multiLineStringContent", 
			"lineStringLiteral", "lineStringContent"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'...'", "'.'", "','", "'('", null, 
			"'['", null, "'{'", "'}'", "'*'", "'%'", "'/'", "'+'", "'-'", "'++'", 
			"'--'", "'&'", "'||'", "'!'", "':'", "';'", "'='", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'->'", "'=>'", "'..'", "'::'", "'?::'", "';;'", "'#'", 
			"'@'", "'?'", "'?:'", "'<'", "'>'", "'<='", "'>='", "'!='", "'!=='", 
			"'as?'", "'=='", "'==='", "'''", null, null, null, "'@file'", "'package'", 
			"'import'", "'class'", "'interface'", "'fun'", "'object'", "'val'", "'var'", 
			"'typealias'", "'constructor'", "'by'", "'companion'", "'init'", "'this'", 
			"'super'", "'typeof'", "'where'", "'if'", "'else'", "'when'", "'try'", 
			"'catch'", "'finally'", "'for'", "'do'", "'while'", "'throw'", "'return'", 
			"'continue'", "'break'", "'as'", "'is'", "'in'", null, null, "'out'", 
			"'@field'", "'@property'", "'@get'", "'@set'", "'get'", "'set'", "'@receiver'", 
			"'@param'", "'@setparam'", "'@delegate'", "'dynamic'", "'public'", "'private'", 
			"'protected'", "'internal'", "'enum'", "'sealed'", "'annotation'", "'data'", 
			"'inner'", "'tailrec'", "'operator'", "'inline'", "'infix'", "'external'", 
			"'suspend'", "'override'", "'abstract'", "'final'", "'open'", "'const'", 
			"'lateinit'", "'vararg'", "'noinline'", "'crossinline'", "'reified'", 
			null, "'\"\"\"'", null, null, null, null, null, null, null, null, "'null'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ShebangLine", "DelimitedComment", "LineComment", "WS", "NL", "RESERVED", 
			"DOT", "COMMA", "LPAREN", "RPAREN", "LSQUARE", "RSQUARE", "LCURL", "RCURL", 
			"REFERENCE", "MOD", "DIV", "ADD", "SUB", "INCR", "DECR", "DEREFERENCE", 
			"DISJ", "EXCL", "COLON", "SEMICOLON", "ASSIGNMENT", "ADD_ASSIGNMENT", 
			"SUB_ASSIGNMENT", "MULT_ASSIGNMENT", "DIV_ASSIGNMENT", "MOD_ASSIGNMENT", 
			"ARROW", "DOUBLE_ARROW", "RANGE", "COLONCOLON", "Q_COLONCOLON", "DOUBLE_SEMICOLON", 
			"HASH", "AT", "QUEST", "ELVIS", "LANGLE", "RANGLE", "LE", "GE", "EXCL_EQ", 
			"EXCL_EQEQ", "AS_SAFE", "EQEQ", "EQEQEQ", "SINGLE_QUOTE", "RETURN_AT", 
			"CONTINUE_AT", "BREAK_AT", "FILE", "PACKAGE", "IMPORT", "CLASS", "INTERFACE", 
			"FUN", "OBJECT", "VAL", "VAR", "TYPE_ALIAS", "CONSTRUCTOR", "BY", "COMPANION", 
			"INIT", "THIS", "SUPER", "TYPEOF", "WHERE", "IF", "ELSE", "WHEN", "TRY", 
			"CATCH", "FINALLY", "FOR", "DO", "WHILE", "THROW", "RETURN", "CONTINUE", 
			"BREAK", "AS", "IS", "IN", "NOT_IS", "NOT_IN", "OUT", "FIELD", "PROPERTY", 
			"GET", "SET", "GETTER", "SETTER", "RECEIVER", "PARAM", "SETPARAM", "DELEGATE", 
			"DYNAMIC", "PUBLIC", "PRIVATE", "PROTECTED", "INTERNAL", "ENUM", "SEALED", 
			"ANNOTATION", "DATA", "INNER", "TAILREC", "OPERATOR", "INLINE", "INFIX", 
			"EXTERNAL", "SUSPEND", "OVERRIDE", "ABSTRACT", "FINAL", "OPEN", "CONST", 
			"LATEINIT", "VARARG", "NOINLINE", "CROSSINLINE", "REIFIED", "QUOTE_OPEN", 
			"TRIPLE_QUOTE_OPEN", "RealLiteral", "FloatLiteral", "DoubleLiteral", 
			"LongLiteral", "IntegerLiteral", "HexLiteral", "BinLiteral", "BooleanLiteral", 
			"NullLiteral", "Identifier", "LabelReference", "LabelDefinition", "FieldIdentifier", 
			"CharacterLiteral", "UNICODE_CLASS_LL", "UNICODE_CLASS_LM", "UNICODE_CLASS_LO", 
			"UNICODE_CLASS_LT", "UNICODE_CLASS_LU", "UNICODE_CLASS_ND", "UNICODE_CLASS_NL", 
			"Inside_Comment", "Inside_WS", "Inside_NL", "QUOTE_CLOSE", "LineStrRef", 
			"LineStrText", "LineStrEscapedChar", "LineStrExprStart", "TRIPLE_QUOTE_CLOSE", 
			"MultiLineStringQuote", "MultiLineStrRef", "MultiLineStrText", "MultiLineStrEscapedChar", 
			"MultiLineStrExprStart", "MultiLineNL", "StrExpr_IN", "StrExpr_Comment", 
			"StrExpr_WS", "StrExpr_NL", null, null, null, null, null, null, null, 
			null, null, "DOLLAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseudoAsmParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseudoAsmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PseudoAsmFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PseudoAsmParser.EOF, 0); }
		public List<TerminalNode> NL() { return getTokens(PseudoAsmParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(PseudoAsmParser.NL, i);
		}
		public List<LiniaContext> linia() {
			return getRuleContexts(LiniaContext.class);
		}
		public LiniaContext linia(int i) {
			return getRuleContext(LiniaContext.class,i);
		}
		public PseudoAsmFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pseudoAsmFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterPseudoAsmFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitPseudoAsmFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitPseudoAsmFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PseudoAsmFileContext pseudoAsmFile() throws RecognitionException {
		PseudoAsmFileContext _localctx = new PseudoAsmFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pseudoAsmFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(48);
				match(NL);
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(54);
				linia();
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(55);
					match(NL);
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JockerContext extends ParserRuleContext {
		public TerminalNode QUEST() { return getToken(PseudoAsmParser.QUEST, 0); }
		public SimpleIdentifierContext simpleIdentifier() {
			return getRuleContext(SimpleIdentifierContext.class,0);
		}
		public JockerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jocker; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterJocker(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitJocker(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitJocker(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JockerContext jocker() throws RecognitionException {
		JockerContext _localctx = new JockerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jocker);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(QUEST);
			setState(69);
			simpleIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferencerContext extends ParserRuleContext {
		public TerminalNode REFERENCE() { return getToken(PseudoAsmParser.REFERENCE, 0); }
		public TerminalNode DEREFERENCE() { return getToken(PseudoAsmParser.DEREFERENCE, 0); }
		public ReferencerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referencer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterReferencer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitReferencer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitReferencer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferencerContext referencer() throws RecognitionException {
		ReferencerContext _localctx = new ReferencerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_referencer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !(_la==REFERENCE || _la==DEREFERENCE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<ReferencerContext> referencer() {
			return getRuleContexts(ReferencerContext.class);
		}
		public ReferencerContext referencer(int i) {
			return getRuleContext(ReferencerContext.class,i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<TypeNameContext> typeName() {
			return getRuleContexts(TypeNameContext.class);
		}
		public TypeNameContext typeName(int i) {
			return getRuleContext(TypeNameContext.class,i);
		}
		public OperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitOperand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitOperand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperandContext operand() throws RecognitionException {
		OperandContext _localctx = new OperandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==REFERENCE || _la==DEREFERENCE) {
				{
				{
				setState(73);
				referencer();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			value();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LANGLE) {
				{
				{
				setState(80);
				name();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LSQUARE) {
				{
				{
				setState(86);
				typeName();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public AddressedContext addressed() {
			return getRuleContext(AddressedContext.class,0);
		}
		public ImmediateContext immediate() {
			return getRuleContext(ImmediateContext.class,0);
		}
		public FloatimmediateContext floatimmediate() {
			return getRuleContext(FloatimmediateContext.class,0);
		}
		public StringimmediateContext stringimmediate() {
			return getRuleContext(StringimmediateContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUEST:
			case IntegerLiteral:
			case Identifier:
				{
				setState(92);
				addressed();
				}
				break;
			case HASH:
				{
				setState(93);
				immediate();
				}
				break;
			case MOD:
				{
				setState(94);
				floatimmediate();
				}
				break;
			case DOLLAR:
				{
				setState(95);
				stringimmediate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddressedContext extends ParserRuleContext {
		public JockerContext jocker() {
			return getRuleContext(JockerContext.class,0);
		}
		public AbsAddressContext absAddress() {
			return getRuleContext(AbsAddressContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<TerminalNode> LPAREN() { return getTokens(PseudoAsmParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(PseudoAsmParser.LPAREN, i);
		}
		public List<IndexContext> index() {
			return getRuleContexts(IndexContext.class);
		}
		public IndexContext index(int i) {
			return getRuleContext(IndexContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(PseudoAsmParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(PseudoAsmParser.RPAREN, i);
		}
		public AddressedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addressed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterAddressed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitAddressed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitAddressed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddressedContext addressed() throws RecognitionException {
		AddressedContext _localctx = new AddressedContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_addressed);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUEST:
				{
				setState(98);
				jocker();
				}
				break;
			case IntegerLiteral:
				{
				setState(99);
				absAddress();
				}
				break;
			case Identifier:
				{
				setState(100);
				identifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAREN) {
				{
				{
				setState(103);
				match(LPAREN);
				setState(104);
				index();
				setState(105);
				match(RPAREN);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public JockerContext jocker() {
			return getRuleContext(JockerContext.class,0);
		}
		public TerminalNode IntegerLiteral() { return getToken(PseudoAsmParser.IntegerLiteral, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterIndex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitIndex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndexContext index() throws RecognitionException {
		IndexContext _localctx = new IndexContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_index);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUEST:
				{
				setState(112);
				jocker();
				}
				break;
			case IntegerLiteral:
				{
				setState(113);
				match(IntegerLiteral);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImmediateContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(PseudoAsmParser.HASH, 0); }
		public JockerContext jocker() {
			return getRuleContext(JockerContext.class,0);
		}
		public TerminalNode IntegerLiteral() { return getToken(PseudoAsmParser.IntegerLiteral, 0); }
		public ImmediateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_immediate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterImmediate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitImmediate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitImmediate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImmediateContext immediate() throws RecognitionException {
		ImmediateContext _localctx = new ImmediateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_immediate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(HASH);
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUEST:
				{
				setState(117);
				jocker();
				}
				break;
			case IntegerLiteral:
				{
				setState(118);
				match(IntegerLiteral);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatimmediateContext extends ParserRuleContext {
		public TerminalNode MOD() { return getToken(PseudoAsmParser.MOD, 0); }
		public JockerContext jocker() {
			return getRuleContext(JockerContext.class,0);
		}
		public TerminalNode DoubleLiteral() { return getToken(PseudoAsmParser.DoubleLiteral, 0); }
		public FloatimmediateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatimmediate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).enterFloatimmediate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAsmParserListener ) ((PseudoAsmParserListener)listener).exitFloatimmediate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAsmParserVisitor ) return ((PseudoAsmParserVisitor<? extends T>)visitor).visitFloatimmediate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FloatimmediateContext floatimmediate() throws RecognitionException {
		FloatimmediateContext _localctx = new FloatimmediateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_floatimmediate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(MOD);
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUEST:
				{
				setState(122);
				jocker();
				}
				break;
			case DoubleLiteral:
				{
				setState(123);
				match(DoubleLiteral);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
